feat: 타임라인 속도 문제 해결, 현재 bottom modal sheet 사용하여 삭제기능 구현 중

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding {
+        enabled = true
+    }
 
     buildFeatures{
         viewBinding = true
@@ -78,6 +81,10 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
     // viewModelScope
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha03"
+
+    // viewModel, livedata
+    implementation ("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.1")
 
     // card view
     implementation "androidx.cardview:cardview:1.0.0"
