feat: comment 실시간 업데이트 받도록 설정 + 새로고침 기능 + 무한 스크롤 추가하는 중

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,7 @@ dependencies {
 
     // card view
     implementation "androidx.cardview:cardview:1.0.0"
+
+    // 새로고침 기능
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
 }
